# STAPpp

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  plate-example_8x8.out  run_benchmark.sh  stap++  test_s4r_patch.out  test_s4r_plate-example_8x8.out  visualize_s4r_patch.py
data/: B31_patch_test.vtk  beam_N2.vtk  beam_N32.vtk  beam_N4.vtk  plate_10x10.vtk  plate_128x128.vtk  plate_12x12.vtk  plate_14x14.vtk  plate_16x16.vtk  plate_18x18.vtk  plate_1edge_fixed_4elem.vtk  plate_20x20.vtk  plate_24x24.vtk  plate_2x2.vtk  plate_32x32.vtk  plate_4x4.vtk  plate_64x64.vtk  plate_6x6.vtk  plate_8x8.vtk
data/B31/: B31.vtk  beam_N128.vtk  beam_N16.vtk  beam_N64.vtk  beam_N8.vtk
data/Question/: Bridge-1-stappp.vtk  Bridge-1.inp  Bridge-1.vtk  Bridge-2.inp
data/S4R-Test/patch-test/: plate_1edge_fixed_4elem.vtk
data/S4R/example6-4/: plate_8x8.vtk
data/S4R/patch-test/: plate_1edge_fixed_4elem.vtk
doc/: README_EIGEN.md
others/utils/: B31_convergence.py  Q4_convergence.py  inp2dat.py  plot_nodes.py  s4r_L2_convergence.py
src/: CMakeLists.txt
src/cpp/: B31.cpp  Bar.cpp  C3D8R.cpp  Domain.cpp  ElementGroup.cpp  Material.cpp  Node.cpp  Outputter.cpp  Q4.cpp  S4R.cpp  Solver.cpp  main.cpp
src/h/: B31.h  C3D8R.h  Domain.h  EigenMatrix.h  EigenSolver.h  Element.h  ElementGroup.h  Material.h  Node.h  Outputter.h  Q4.h  S4R.h  SkylineMatrix.h
utils/: L2_figure.py  auto_gen_s4r.py  gen_s4r_patch.py  inp2dat.py  inpdatnew.py  plot_nodes.py  s4r_L2_convergence.py  visualize_s4r_patch.py
